fix hero-wrap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,6 @@ a{
     text-align: center;
     color: #FFFFFF;
     display: inline-block;
-    
 }
 
 .btn:hover{
@@ -71,6 +70,7 @@ a{
 .hero-wrap{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     position: relative;
     background-color: #E6F0FF;
     height: calc(100vh - 90px);
@@ -116,16 +116,12 @@ a{
     text-decoration: underline;
 }
 
-.hero {
-    margin-top: 130px;
-}
-
-.hero .info{
+.hero-wrap .info{
     width: 51%;
 
 }
 
-.hero .sub-title{
+.hero-wrap .sub-title{
     font-size: 1.8rem;
     font-weight: 500;
     line-height: 1.5;
@@ -133,7 +129,7 @@ a{
     color: #687690;
 }
 
-.hero .title {
+.hero-wrap .title {
     font-size: 6.2rem;
     font-weight: 700;
     line-height: 1;
@@ -143,7 +139,7 @@ a{
    
 }
 
-.hero .desc{
+.hero-wrap .desc{
 font-size: 1.8rem;
 font-weight: 500;
 line-height: 1.7;
